--- a/src/Vendr.PaymentProviders.Dibs/Vendr.PaymentProviders.Dibs.csproj
+++ b/src/Vendr.PaymentProviders.Dibs/Vendr.PaymentProviders.Dibs.csproj
@@ -87,6 +87,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DibsPaymentProviderBase.cs" />
+    <Compile Include="DibsEasyOneTimeSettings.cs" />
+    <Compile Include="DibsSettingsBase.cs" />
+    <Compile Include="DibsSettingsEasyBase.cs" />
     <Compile Include="Easy\Api\DibsEasyClient.cs" />
     <Compile Include="Easy\Api\Models\DibsEasyClientConfig.cs" />
     <Compile Include="Easy\Api\Models\DibsPayment.cs" />
@@ -96,6 +100,7 @@
     <Compile Include="DibsSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
+    <Compile Include="DibsEasyOneTimePaymentProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
