--- a/src/Vendr.PaymentProviders.Dibs/Vendr.PaymentProviders.Dibs.csproj
+++ b/src/Vendr.PaymentProviders.Dibs/Vendr.PaymentProviders.Dibs.csproj
@@ -94,10 +94,12 @@
     <Compile Include="Easy\Api\DibsEasyClient.cs" />
     <Compile Include="Easy\Api\Models\DibsEasyClientConfig.cs" />
     <Compile Include="Easy\Api\Models\DibsPayment.cs" />
+    <Compile Include="Easy\Api\Models\DibsPaymentRequest.cs" />
     <Compile Include="Easy\Api\Models\DibsPaymentResult.cs" />
     <Compile Include="DibsLang.cs" />
     <Compile Include="DibsPaymentProvider.cs" />
     <Compile Include="DibsSettings.cs" />
+    <Compile Include="Easy\Api\Models\DibsWebhookEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="DibsEasyOneTimePaymentProvider.cs" />
